--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,7 +17,8 @@ Imports:
     hydroGOF,
     rgdal,
     sp,
-    lubridate
+    lubridate,
+    latex2exp
 Depends:
     R (>= 2.10),
     raster,
