updated import packages

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,7 @@ import(RColorBrewer)
 import(caret)
 import(chillR)
 import(hydroGOF)
+import(latex2exp)
 import(leaflet)
 import(quantregForest)
 import(randomForest)
